--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@
   --color-general: #e5e5e5;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: var(--color-slate, #434455);
+  background-color: var(--color-white, #ffffff);
+}
 p,
 h1,
 h2,
@@ -24,7 +30,8 @@ h6 {
   margin: 0;
 }
 
-ul {
+ul,
+ol {
   margin: 0;
   padding-left: 0;
 }
@@ -32,12 +39,7 @@ ul {
 img {
   display: block;
 }
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  color: var(--color-slate, #434455);
-  background-color: var(--color-white, #ffffff);
-}
+
 .list {
   list-style: none;
 }
@@ -46,20 +48,42 @@ body {
   text-decoration: none;
 }
 
-/*-------------------------------------header--------------------------------------*/
+button {
+  display: block;
+  cursor: pointer;
+  border: none;
+}
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
   width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  padding-top: 26px;
-  padding-bottom: 26px;
 }
+/*-------------------------------------header--------------------------------------*/
 
 .header {
   background: var(--color-white, #ffffff);
-  padding-top: 26px;
-  padding-bottom: 26px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-logo-web {
@@ -87,7 +111,6 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--color-grey, #2e2f42);
-  margin-right: 76px;
 }
 
 .header-text {
@@ -105,6 +128,7 @@ body {
 .header-contacts {
   font-style: normal;
   display: flex;
+  margin-left: auto;
 }
 .header-nav {
   display: flex;
@@ -112,10 +136,11 @@ body {
 .header-menu {
   display: flex;
   gap: 40px;
+  margin-left: 76px;
 }
 .header-container {
   display: flex;
-  justify-content: space-between;
+  margin-left: auto;
   align-items: center;
 }
 .contact {
@@ -138,9 +163,10 @@ body {
 
 /*-------------------------------------hero--------------------------------------*/
 .hero {
-  background: var(--color-grey, #2e2f42);
+  background-color: var(--color-grey, #2e2f42);
   padding-top: 188px;
   padding-bottom: 188px;
+  text-align: center;
 }
 
 .hero-title {
@@ -152,7 +178,7 @@ body {
   color: var(--color-white, #ffffff);
   margin-left: auto;
   margin-right: auto;
-  width: 496px;
+  max-width: 496px;
 }
 .hero-btn {
   margin: 0 auto;
@@ -167,25 +193,21 @@ body {
   letter-spacing: 0.04em;
   color: var(--color-white, #ffffff);
   background: var(--color-iris, #4d5ae5);
-  cursor: pointer;
   padding: 16px 32px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   margin-top: 48px;
   margin-left: auto;
-
+  border: none;
   min-width: 169px;
-  height: 56px;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
-  background: var(--color-ocean, #404bbf);
+  background-color: var(--color-ocean, #404bbf);
 }
 /*-------------------------------------features--------------------------------------*/
-.features-icon {
-  padding: 120px 0px;
-}
+
 .features-subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -230,13 +252,11 @@ body {
 }
 .examples-list {
   margin-top: 72px;
-  margin-bottom: 120px;
   display: flex;
-  width: calc((100% - 48px) / 3);
+  gap: 24px;
 }
 
 .examples-img {
-  margin-right: 24px;
 }
 /*-------------------------------------team--------------------------------------*/
 
@@ -251,13 +271,11 @@ body {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--color-grey, #2e2f42);
-  background: var(--color-cloud, #f4f4fd);
+  background-color: var(--color-cloud, #f4f4fd);
 }
 
 .team-back {
-  background: var(--color-cloud, #f4f4fd);
-  padding-top: 120px;
-  padding-bottom: 120px;
+  background-color: var(--color-cloud, #f4f4fd);
 }
 
 .team-title {
@@ -282,9 +300,10 @@ body {
 }
 
 .team-list {
-  background: var(--color-cloud, #f4f4fd);
+  background-color: var(--color-cloud, #f4f4fd);
   display: flex;
-  width: calc((100% - 72px) / 4);
+  gap: 24px;
+  margin-top: 72px;
 }
 .team-photo {
 }
@@ -294,8 +313,6 @@ body {
 }
 
 .team-text {
-  margin-top: 72px;
-  margin-right: 24px;
 }
 /* ---------------footer------------------ */
 
