--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -64,10 +64,6 @@ button {
   cursor: pointer;
   border: none;
 }
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
 
 .visually-hidden {
   position: absolute;
@@ -223,13 +219,12 @@ button {
 .example-img-text {
 }
 .example-photo {
-  width: calc((100% - 72px) / 3);
+  width: 360px;
   list-style: none;
 }
 .example-img {
-  text-decoration: none;
   height: auto;
-  width: 100%;
+  max-width: 100%;
 }
 .example-title {
   font-weight: 500;
@@ -238,7 +233,6 @@ button {
   letter-spacing: 0.02em;
   color: var(--color-grey, #2e2f42);
   margin-bottom: 8px;
-  margin-left: 16px;
 }
 .example-item {
   font-weight: 400;
@@ -246,18 +240,20 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate, #434455);
-  margin-left: 16px;
 }
 .example-border {
   border: 1px solid #e7e9fc;
   border-top: none;
   padding-top: 32px;
   padding-bottom: 32px;
+  padding-left: 16px;
 }
 /* ---------------footer------------------ */
 
 .footer {
   background-color: var(--color-grey, #2e2f42);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -298,6 +294,4 @@ button {
 }
 
 .footer-bottom {
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
