--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,9 @@ button {
   color: var(--color-grey, #2e2f42);
   background-color: #ffffff;
 }
-
+.examples-section {
+  padding-top: 0;
+}
 .examples-img {
   text-decoration: none;
 }
@@ -284,8 +286,7 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--color-grey, #2e2f42);
-  background-color: #ffffff;
-  padding-top: 32px;
+  margin-bottom: 8px;
 }
 .team-item {
   font-weight: 400;
@@ -293,14 +294,9 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-slate, #434455);
-  background-color: #ffffff;
-  padding-bottom: 32px;
-  align-items: center;
-  gap: 60px;
 }
 
 .team-list {
-  background-color: var(--color-cloud, #f4f4fd);
   display: flex;
   gap: 24px;
   margin-top: 72px;
@@ -311,13 +307,21 @@ button {
   text-decoration: none;
   text-align: center;
 }
-
+.team-icon {
+  padding: 32px 0px;
+}
 .team-text {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
 }
 /* ---------------footer------------------ */
 
 .footer {
   background: var(--color-grey, #2e2f42);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-logo {
@@ -358,6 +362,4 @@ button {
 }
 
 .footer-bottom {
-  padding-top: 100px;
-  padding-bottom: 100px;
 }
